<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#f2f2f2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_margin="7dp"
        android:padding="7dp"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:layout_marginBottom="7dp"
            >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_hotel_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/hotel_name"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="3dp" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_launcher" />

                    <ImageView
                        android:id="@+id/ImageView02"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_launcher" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_launcher" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView_hotel_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_tel" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView_hotel_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotel_info"
            android:minHeight="200dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>